fix: spacing issues

--- a/src/components/Agenda/Agenda.css
+++ b/src/components/Agenda/Agenda.css
@@ -64,3 +64,8 @@
     }
     
 }
+
+.agnda-hdr{
+    padding-top: 5%;
+    padding-bottom: 5%;
+}
